--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -8,11 +8,12 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.tb.wangfang.news"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
