--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -80,5 +80,8 @@ dependencies {
     releaseCompile rootProject.ext.dependencies["leakcanary-android-no-op"]
 
     compile 'com.android.support:support-v4:25.3.1'
+
+    compile 'com.youth.banner:banner:1.4.9'  //最新版本
+
     testCompile 'junit:junit:4.12'
 }
