--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -79,9 +79,10 @@ dependencies {
     debugCompile rootProject.ext.dependencies["leakcanary-android"]
     releaseCompile rootProject.ext.dependencies["leakcanary-android-no-op"]
 
+    //最新版本
     compile 'com.android.support:support-v4:25.3.1'
-
-    compile 'com.youth.banner:banner:1.4.9'  //最新版本
-
+    compile 'com.youth.banner:banner:1.4.9'
+    compile 'com.github.barteksc:android-pdf-viewer:2.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
