--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile rootProject.ext.dependencies["glide-transformations"]
     compile rootProject.ext.dependencies["html-textview"]
     compile rootProject.ext.dependencies["constraint-layout"]
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.5'
     //rx
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
