--- a/news/app/src/main/AndroidManifest.xml
+++ b/news/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name">
@@ -31,7 +31,9 @@
 
         <activity
             android:name=".ui.activity.FilterDocActivity"
-            android:label="@string/title_activity_filter_doc"></activity>
+            android:label="@string/title_activity_filter_doc">
+
+        </activity>
     </application>
 
 </manifest>
