--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -15,12 +15,22 @@ android {
         targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
         }
     }
 }
@@ -55,7 +65,6 @@ dependencies {
     compile rootProject.ext.dependencies["glide-transformations"]
     compile rootProject.ext.dependencies["html-textview"]
     compile rootProject.ext.dependencies["constraint-layout"]
-    compile 'com.afollestad.material-dialogs:commons:0.9.4.5'
     //rx
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
@@ -81,6 +90,7 @@ dependencies {
     compile rootProject.ext.dependencies["logger"]
     compile rootProject.ext.dependencies["fragmentation"]
     compile rootProject.ext.dependencies["crashreport"]
+    compile 'com.luffykou:android-common-utils:1.1.3'
     //canary
     debugCompile rootProject.ext.dependencies["blockcanary-android"]
     releaseCompile rootProject.ext.dependencies["blockcanary-no-op"]
@@ -92,10 +102,13 @@ dependencies {
 
     compile project(':folioreader')
 
+    compile project(path: ':library')
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.5'
+    compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.github.barteksc:android-pdf-viewer:2.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
-    compile project(path: ':library')
 }
