--- a/news/settings.gradle
+++ b/news/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':webViewMarker', ':folioreader', ':library', ':material-spinner-1.0.5'
+include ':app', ':webViewMarker', ':folioreader', ':library'
