--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 apply plugin: 'realm-android'
-
+apply plugin: 'org.greenrobot.greendao'
 
 
 android {
@@ -33,6 +33,12 @@ android {
             path "CMakeLists.txt"
         }
     }
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.tb.greendao.gen'
+        targetGenDir 'src/main/java'
+    }
+
 }
 
 //sourceSets {
@@ -57,6 +63,8 @@ dependencies {
     compile rootProject.ext.dependencies["design"]
     compile rootProject.ext.dependencies["recyclerview-v7"]
     compile rootProject.ext.dependencies["cardview-v7"]
+    compile 'org.greenrobot:greendao:3.2.0'
+
     //ui
     compile rootProject.ext.dependencies["material-calendarview"]
     compile rootProject.ext.dependencies["materialsearchview"]
