--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -100,35 +100,27 @@ protobuf {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-
     //        exclude group: 'com.android.support', module: 'support-annotations'
-
     //    })
-
     //base
     //ui
-//    compile "com.prolificinteractive:material-calendarview:1.4.0"
-//    compile "com.miguelcatalan:materialsearchview:1.4.0"
-//    compile "net.opacapp:multiline-collapsingtoolbar:1.3.1"
-
+    //    compile "com.prolificinteractive:material-calendarview:1.4.0"
+    //    compile "com.miguelcatalan:materialsearchview:1.4.0"
+    //    compile "net.opacapp:multiline-collapsingtoolbar:1.3.1"
     //    compile "org.sufficientlysecure:html-textview:3.1"
     //rx
     //network
-
     //    compile "org.jsoup:jsoup:1.10.1"
     //di
     //other
     //canary
     //最新版本
-
     //grpc和rxjava
-
     // You need to build grpc-java to obtain these libraries below.
     // CURRENT_GRPC_VERSION
     // CURRENT_GRPC_VERSION
     // CURRENT_GRPC_VERSION
     //    compile 'io.reactivex:rxjava:1.0.14'
-
     //    compile 'io.reactivex:rxandroid:1.0.1'
     compile project(':folioreader')
     compile project(path: ':library')
@@ -137,10 +129,10 @@ dependencies {
     compile project(path: ':banner')
     //    compile 'com.luffykou:android-common-utils:1.1.3'
     //    compile 'com.github.barteksc:android-pdf-viewer:2.5.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'io.grpc:grpc-okhttp:1.4.0'
     compile 'io.grpc:grpc-okhttp:1.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'io.grpc:grpc-okhttp:1.4.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
@@ -166,6 +158,7 @@ dependencies {
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
