--- a/news/app/src/main/AndroidManifest.xml
+++ b/news/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
         <activity android:name=".ui.activity.PayOrderActivity" />
         <activity android:name=".ui.activity.HelpActivity" />
         <activity android:name=".ui.activity.QuestionActivity" />
-        <activity android:name=".ui.activity.NormalQuestionActivity"></activity>
+        <activity android:name=".ui.activity.NormalQuestionActivity" />
+        <activity android:name=".ui.activity.ImageBrowseActivity"></activity>
     </application>
 
 </manifest>
