--- a/news/app/src/main/AndroidManifest.xml
+++ b/news/app/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
         <activity android:name=".ui.activity.NormalQuestionActivity" />
         <activity android:name=".ui.activity.ImageBrowseActivity" />
         <activity android:name=".ui.activity.editNackNameActivity" />
-        <activity android:name=".ui.activity.PersonEditListActivity"></activity>
+        <activity android:name=".ui.activity.PersonEditListActivity" />
+        <activity android:name=".ui.activity.EditRewardActivity"></activity>
     </application>
 
 </manifest>
