--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.google.protobuf'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file("E:/keystore/news.jks")
+            storePassword "wanfangnews"
+            keyAlias "key0"
+            keyPassword "123456"
+        }
+    }
     compileSdkVersion  25
     buildToolsVersion  '25.0.2'
     defaultConfig {
@@ -22,7 +30,7 @@ android {
         }
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
         manifestPlaceholders = [
@@ -54,24 +62,17 @@ android {
         release {
             minifyEnabled false
             shrinkResources false
-            signingConfig signingConfigs.debug
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             minifyEnabled false
             shrinkResources false
-            signingConfig signingConfigs.debug
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    signingConfigs {
-        release {
-            storeFile file("E:/keystore/news.jks")
-            storePassword "wanfangnews"
-            keyAlias "key0"
-            keyPassword "123456"
-        }
-    }
+
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
@@ -86,16 +87,6 @@ android {
 
 }
 
-//sourceSets {
-//    main {
-//        manifest.srcFile 'AndroidManifest.xml'
-//        java.srcDirs = ['src/main/java']
-//        res.srcDirs = ['res']
-//    }
-//    test {
-//        java.srcDirs = ['src/test/java']
-//    }
-//}
 protobuf {
     protoc {
         artifact = 'com.google.protobuf:protoc:3.1.0'
@@ -143,58 +134,10 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     releaseCompile 'com.github.moduth:blockcanary-no-op:1.2.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-
-    //        exclude group: 'com.android.support', module: 'support-annotations'
-
-    //    })
-
-    //base
-
-    //ui
-
-    //    compile "com.prolificinteractive:material-calendarview:1.4.0"
-
-    //    compile "com.miguelcatalan:materialsearchview:1.4.0"
-
-    //    compile "net.opacapp:multiline-collapsingtoolbar:1.3.1"
-
-    //    compile "org.sufficientlysecure:html-textview:3.1"
-
-    //rx
-
-    //network
-
-    //    compile "org.jsoup:jsoup:1.10.1"
-
-    //di
-
-    //other
-
-    //canary
-
-    //最新版本
-
-    //grpc和rxjava
-
-    // You need to build grpc-java to obtain these libraries below.
-
-    // CURRENT_GRPC_VERSION
-
-    // CURRENT_GRPC_VERSION
-
-    // CURRENT_GRPC_VERSION
-
-    //    compile 'io.reactivex:rxjava:1.0.14'
-
-    //    compile 'io.reactivex:rxandroid:1.0.1'
     compile project(path: ':library')
     compile project(':librarypdf')
     compile project(path: ':PhotoPicker')
     compile project(path: ':banner')
-    //    compile 'com.luffykou:android-common-utils:1.1.3'
-
-    //    compile 'com.github.barteksc:android-pdf-viewer:2.5.1'
     compile 'io.grpc:grpc-okhttp:1.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile files('libs/MobCommons-2017.0823.1556.jar')
@@ -228,26 +171,18 @@ dependencies {
     compile 'me.yokeyword:fragmentation:0.7.9'
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'org.greenrobot:greendao:3.2.0'
-    compile 'io.grpc:grpc-protobuf-lite:1.4.0'
     compile 'io.grpc:grpc-stub:1.4.0'
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.afollestad.material-dialogs:commons:0.9.4.5'
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:support-v4:25.3.1'
-    //    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.gelitenight.waveview:waveview:1.0.0'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
-    //    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     compile files('libs/wechat-sdk-android-with-mta-1.0.2.jar')
-    compile files('libs/libammsdk.jar')
     compile 'com.google.protobuf:protobuf-java:3.1.0'
     compile 'cn.jiguang.sdk:jpush:3.0.9'  // 此处以JPush 3.0.9 版本为例。
     compile 'cn.jiguang.sdk:jcore:1.1.7'  // 此处以JCore 1.1.7 版本为例。
-//    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
-    //    compile 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
-
-    //    compile 'com.google.protobuf:protobuf-lite:3.0.1'
     compile files('libs/MiPush_SDK_Client_3_4_5.jar')
     compile project(':hMSSdkBase')
     compile project(':hMSSdkPush')
