--- a/news/app/build.gradle
+++ b/news/app/build.gradle
@@ -13,8 +13,8 @@ android {
             keyPassword "123456"
         }
     }
-    compileSdkVersion  25
-    buildToolsVersion  '25.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.tb.wangfang.news"
         versionCode 1
@@ -30,13 +30,13 @@ android {
         }
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
         manifestPlaceholders = [
-                JPUSH_PKGNAME : applicationId,
+                JPUSH_PKGNAME: applicationId,
                 JPUSH_APPKEY : "5f5eecb63e042f246fd8b325", //JPush上注册的包名对应的appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
     }
     sourceSets {
@@ -126,20 +126,10 @@ protobuf {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    debugCompile 'com.github.moduth:blockcanary-android:1.2.1'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    releaseCompile 'com.github.moduth:blockcanary-no-op:1.2.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     compile project(path: ':library')
     compile project(':librarypdf')
     compile project(path: ':PhotoPicker')
     compile project(path: ':banner')
-    compile 'io.grpc:grpc-okhttp:1.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile files('libs/MobCommons-2017.0823.1556.jar')
     compile files('libs/MobTools-2017.0823.1556.jar')
     compile files('libs/ShareSDK-Core-3.0.2.jar')
@@ -153,6 +143,16 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Moments-3.0.2.jar')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'io.grpc:grpc-okhttp:1.4.0'
+    compile files('libs/wechat-sdk-android-with-mta-1.0.2.jar')
+    // 此处以JPush 3.0.9 版本为例。
+    // 此处以JCore 1.1.7 版本为例。
+    // 此处以JMessage 2.2.1 版本为例。
+    compile files('libs/MiPush_SDK_Client_3_4_5.jar')
+    compile project(':hMSSdkBase')
+    compile project(':hMSSdkPush')
+    compile project(':lib')
+    compile 'io.grpc:grpc-okhttp:1.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
@@ -179,12 +179,16 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.gelitenight.waveview:waveview:1.0.0'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
-    compile files('libs/wechat-sdk-android-with-mta-1.0.2.jar')
     compile 'com.google.protobuf:protobuf-java:3.1.0'
-    compile 'cn.jiguang.sdk:jpush:3.0.9'  // 此处以JPush 3.0.9 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.7'  // 此处以JCore 1.1.7 版本为例。
-    compile files('libs/MiPush_SDK_Client_3_4_5.jar')
-    compile project(':hMSSdkBase')
-    compile project(':hMSSdkPush')
-    compile project(':lib')
+    compile 'cn.jiguang.sdk:jpush:3.0.9'
+    compile 'cn.jiguang.sdk:jcore:1.1.7'
+    compile 'cn.jiguang.sdk:jmessage:2.2.1'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    debugCompile 'com.github.moduth:blockcanary-android:1.2.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    releaseCompile 'com.github.moduth:blockcanary-no-op:1.2.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
