--- a/news/app/src/main/AndroidManifest.xml
+++ b/news/app/src/main/AndroidManifest.xml
@@ -245,7 +245,8 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.activity.MessageActivity"></activity>
+        <activity android:name=".ui.activity.MessageActivity" />
+        <activity android:name=".ui.activity.MySubscribeActivity"></activity>
     </application>
 
 </manifest>
