--- a/news/settings.gradle
+++ b/news/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':library', ':librarypdf', ':PhotoPicker', ':banner', ':lib'
+include ':app', ':library', ':librarypdf', ':PhotoPicker', ':banner', ':lib', ':spinner'
 include ':hMSSdkBase'
 include ':hMSSdkPush'
