--- a/news/app/src/main/AndroidManifest.xml
+++ b/news/app/src/main/AndroidManifest.xml
@@ -249,7 +249,8 @@
         <activity android:name=".ui.activity.MySubscribeActivity" />
         <activity android:name=".ui.activity.InsertSubscribeActivity" />
         <activity android:name=".ui.activity.ManageSubscribeActivity" />
-        <activity android:name=".ui.activity.MyWalletActivity"></activity>
+        <activity android:name=".ui.activity.MyWalletActivity" />
+        <activity android:name=".ui.activity.MessageCenterActivity"></activity>
     </application>
 
 </manifest>
